--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -52,7 +52,13 @@
         android:name="com.android.launcher3.permission.RECEIVE_LAUNCH_BROADCASTS"
         android:protectionLevel="signature"
         />
+    <permission
+        android:name="com.google.android.apps.dashclock.permission.READ_EXTENSION_DATA"
+        android:label="@string/permission_label_read_extension_data"
+        android:description="@string/permission_desc_read_extension_data"
+        android:protectionLevel="normal" />
 
+    <uses-permission android:name="com.google.android.apps.dashclock.permission.READ_EXTENSION_DATA" />
     <uses-permission android:name="android.permission.SET_WALLPAPER" />
     <uses-permission android:name="android.permission.SET_WALLPAPER_HINTS" />
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -76,7 +82,7 @@
         android:largeHeap="@bool/config_largeHeap"
         android:supportsRtl="true">
         <activity
-            android:name="org.cyanogenmod.trebuchet.TrebuchetLauncher"
+            android:name="org.cyanogenmod.trebuchet.CustomHomeLauncher"
             android:launchMode="singleTask"
             android:clearTaskOnLaunch="true"
             android:stateNotNeeded="true"
