Add hidden apps [3/3] Hide apps from launcher (e.g. if already on homescreen)
Change-Id: I13ce39deff7cbe60be02a87de61d5a1e8968e137

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -68,7 +68,8 @@
     <uses-permission android:name="com.android.launcher3.permission.WRITE_SETTINGS" />
     <uses-permission android:name="com.android.launcher3.permission.RECEIVE_LAUNCH_BROADCASTS" />
     <uses-permission android:name="cyanogenmod.permission.PROTECTED_APP" />
-
+    <uses-permission android:name="cyanogenmod.permission.HIDDEN_APP" />
+    
     <application
         android:name="com.android.launcher3.LauncherApplication"
         android:label="@string/cm_application_name"
