--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,7 +21,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.launcher3"
     android:versionName="@string/application_version"
-    android:versionCode="1000">
+    android:versionCode="1000"
+    android:sharedUserId="android.uid.systemui">
 
     <original-package android:name="com.android.launcher3" />
 
@@ -68,6 +69,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.BROADCAST_STICKY"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.DEVICE_POWER" />
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
     <uses-permission android:name="com.android.launcher.permission.WRITE_SETTINGS" />
     <uses-permission android:name="com.android.launcher3.permission.READ_SETTINGS" />
